PA_Education/TestMenifest/force-app/main/default/objects/QuoteItemManage__c/QuoteItemManage__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>견적상세관리</label>
</CustomObject>