PA_Education/TestMenifest/force-app/main/default/objects/QuoteItemManage__c/fields/ConsultantChief__c.field-meta.xml
<CustomField>
    <fullName>ConsultantChief__c</fullName>
    <description>M/M 기준 Consultant Chief 단가</description>
    <label>단가 (Consultant Chief)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>