PA_Education/TestMenifest/force-app/main/default/objects/QuoteItemManage__c/fields/ConsultantPrincipal__c.field-meta.xml
<CustomField>
    <fullName>ConsultantPrincipal__c</fullName>
    <description>M/M 기준 Consultant Principal 단가</description>
    <label>단가 (Consultant Principal)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>