PA_Education/TestMenifest/force-app/main/default/objects/QuoteItemManage__c/fields/ConsultantSupervisor__c.field-meta.xml
<CustomField>
    <fullName>ConsultantSupervisor__c</fullName>
    <description>M/M 기준 Consultant Supervisor 단가</description>
    <label>단가 (Consultant Supervisor)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>