PA_Education/TestMenifest/force-app/main/default/objects/QuoteItemManage__c/fields/DeveloperChief__c.field-meta.xml
<CustomField>
    <fullName>DeveloperChief__c</fullName>
    <description>M/M 기준 Developer Chief 단가</description>
    <label>단가 (Developer Chief)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>