PA_Education/TestMenifest/force-app/main/default/objects/QuoteItemManage__c/fields/DeveloperPrincipal__c.field-meta.xml
<CustomField>
    <fullName>DeveloperPrincipal__c</fullName>
    <description>M/M 기준 Developer Principal 단가</description>
    <label>단가 (Developer Principal)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>