PA_Education/TestMenifest/force-app/main/default/objects/QuoteItemManage__c/fields/DeveloperSupervisor__c.field-meta.xml
<CustomField>
    <fullName>DeveloperSupervisor__c</fullName>
    <description>M/M 기준 Developer Supervisor 단가</description>
    <label>단가 (Developer Supervisor)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>