PA_Education/TestMenifest/force-app/main/default/objects/QuoteItemManage__c/fields/Level1__c.field-meta.xml
<CustomField>
    <fullName>Level1__c</fullName>
    <label>등급 (Level1)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>