PA_Education/TestMenifest/force-app/main/default/objects/QuoteItemManage__c/fields/Level2__c.field-meta.xml
<CustomField>
    <fullName>Level2__c</fullName>
    <label>등급 (Level2)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>