PA_Education/TestMenifest/force-app/main/default/objects/QuoteItemManage__c/fields/Level3__c.field-meta.xml
<CustomField>
    <fullName>Level3__c</fullName>
    <label>등급 (Level3)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>